--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -126,7 +126,7 @@
             <p>滞在秒数: <span id="timer-val">0</span> sec</p>
             <p>クリック回数: <span id="click-count">0</span></p>
             <p>アクセス端末: <span id="user-device" style="color: #0f0; font-weight: bold;"></span></p>
-            <p>IPアドレス: <span id="user-ip" style="color: #f00; font-weight: bold;">SCANNING...</span></p>
+            <p>IPアドレス: <span id="user-ip" style="color: #0f0; font-weight: bold;">SCANNING...</span></p>
             <p>最後に押されたキー: <span id="last-key" style="color: #ff0; font-weight: bold;">NONE</span></p>
             <p>思考の蓄積（ログ）: <br>
                 <span id="key-history" style="font-size: 0.8em; color: #888; word-wrap: break-word;">...waiting for input</span>
